@@ -1,3 +1,8 @@
+2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* exec-reauth.c (exec_reauth): Always destroy REF, even when we
+	get errors.
+
 2000-01-29  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* maptime.h: Include <errno.h> for error_t decl.
